--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="close">+</div>
             <p>Book Title</p>
             <input class="book-title" type="text" placeholder="">
-            <img src="/images/bookmage.png" style="height: 80px; width: auto;">
+            <!-- //<img src="/images/bookmage.png" style="height: 80px; width: auto;"> -->
             <p>Author</p>
             <input class="author" type="text" placeholder="">
             <p>Pages</p>
