--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
             <span id="signin">Sign In</span>
         </div>
     </header>
+    <h2 class="no-books-added"></h2>
     <div id="book-container">
+        <!-- <div class="new-book">
+            <span class="read" onclick="myLibrary[${index}].read()">READ</span>
+        </div> -->
     </div>
     <div id="popup-form">
         <div class="form-content">
             <div class="close">+</div>
             <p>Book Title</p>
             <input class="book-title" type="text" placeholder="">
-            <!-- //<img src="/images/bookmage.png" style="height: 80px; width: auto;"> -->
             <p>Author</p>
             <input class="author" type="text" placeholder="">
             <p>Pages</p>
@@ -31,5 +34,6 @@
         </div>
     </div>
 <script src="script.js"></script>
+</div>
 </body>
 </html>
