--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
         <h1><span style="color: rgba(0,136,169,1)">my</span>Library</h1>
         <div class="options">
             <span id="addbook">Add Book</span>
-            <span id="signin">Sign In</span>
+            <span id="lstorage">Local Storage</span>
         </div>
     </header>
     <h2 class="no-books-added"></h2>
     <div id="book-container">
-        <!-- <div class="new-book">
-            <span class="read" onclick="myLibrary[${index}].read()">READ</span>
-        </div> -->
     </div>
     <div id="popup-form">
         <div class="form-content">
             <div class="close">+</div>
             <p>Book Title</p>
             <input class="book-title" type="text" placeholder="">
+            <img src="/images/bookmage.png" style="height: 80px; width: auto;">
             <p>Author</p>
             <input class="author" type="text" placeholder="">
             <p>Pages</p>
